--- a/dj-events-backend/api/events/models/events.settings.json
+++ b/dj-events-backend/api/events/models/events.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "events",
   "info": {
-    "name": "events"
+    "name": "events",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -13,10 +14,6 @@
   "attributes": {
     "name": {
       "type": "string"
-    },
-    "skug": {
-      "type": "uid",
-      "targetField": "name"
     },
     "venue": {
       "type": "string"
@@ -52,6 +49,9 @@
       "plugin": "users-permissions",
       "model": "user",
       "via": "events"
+    },
+    "slug": {
+      "type": "uid"
     }
   }
 }
